@@ -49,7 +49,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -145,10 +144,6 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>kmg.tool.presentation.ui.gui.isc.InsertionSqlCreationTool</mainClass>
-                    <options>
-                        <option>--add-opens</option>
-                        <option>java.base/java.lang=ALL-UNNAMED</option>
-                    </options>
                 </configuration>
             </plugin>
             <plugin>
